[gd_scene load_steps=5 format=2]

[ext_resource path="res://assets/models/Skeleton.gltf" type="PackedScene" id=1]
[ext_resource path="res://game/creatures/zombie_1/Zombie1.gd" type="Script" id=2]
[ext_resource path="res://game/creatures/zombie_1/PlayerDetectionRayCast.gd" type="Script" id=3]

[sub_resource type="CapsuleShape" id=1]
radius = 0.303463
height = 1.59071

[node name="Zombie1" type="KinematicBody"]
script = ExtResource( 2 )

[node name="AnimatedModel" parent="." instance=ExtResource( 1 )]
transform = Transform( -0.058, 0, -5.07052e-09, 0, 0.058, 0, 5.07052e-09, 0, -0.058, 0, -0.0940306, 0 )

[node name="CollisionShape" type="CollisionShape" parent="."]
transform = Transform( 1, 0, 0, 0, -4.37114e-08, -1, 0, 1, -4.37114e-08, 0, 1.10057, -0.0110152 )
shape = SubResource( 1 )

[node name="Timer" type="Timer" parent="."]

[node name="Timer2" type="Timer" parent="."]
process_mode = 0
autostart = true

[node name="PlayerDetectionRayCast" type="RayCast" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 2.05482, 0.0651466 )
enabled = true
cast_to = Vector3( 0, 0, -20 )
script = ExtResource( 3 )

[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
[connection signal="timeout" from="Timer2" to="." method="_on_Timer2_timeout"]
